# wfpgrowth

./: LICENSE  README.md  pyproject.toml  test_wfpgrowth.py  wfpgrowth.py
.github/workflows/: publish.yaml
tests/: test_wfpgrowth.py
wfpgrowth/: __init__.py
